prevent closing quotemark in citation from wrapping to next line (a bit hacky)

--- a/_sass/blocks/cite.scss
+++ b/_sass/blocks/cite.scss
@@ -21,17 +21,16 @@
         content: "«";
       }
 
-      & > * {
+      &>* {
         display: inline;
         color: var(--beige-lighter);
         line-height: var(--lh-default);
       }
 
-      &::after {
-        display: inline-block;
-        margin-left: calc(var(--xxs) * -0.3);
+      &>p>span {
+        margin-left: calc(var(--xxs) * 0.3);
         color: var(--lighten);
-        content: "»";
+        white-space: nowrap;
       }
     }
 
